src/objects/MSTR_Engagement__c.object
<CustomObject>
    <fields>
        <fullName>Account1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Engagements*</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Opportunity__r.Account.Id , Opportunity__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings__c</fullName>
        <label>Bookings</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_LOE_wks__c</fullName>
        <description>Number of weeks to be invested according to business.</description>
        <inlineHelpText>Number of weeks to be invested according to business.</inlineHelpText>
        <label>Business LOE (wks)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Engagements3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseID__c</fullName>
        <description>All engagements migrated to cases will have this ID to reference the new record.</description>
        <label>CaseID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Id__c</fullName>
        <label>Cloud Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Health__c</fullName>
        <formula>CASE( Cost_Risk__c,
&quot;High&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000006LTPP&quot;,&quot;&quot;,16,16),
&quot;Medium&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000006LTPK&quot;,&quot;&quot;,16,16),
&quot;Low&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000006LTPF&quot;,&quot;&quot;,16,16),
&quot; &quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Risk__c</fullName>
        <label>Cost Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <formula>IF( ISBLANK(Opportunity__r.DSI__c), 
  &quot;Not Available&quot;, 
  HYPERLINK(&quot;/&quot; + Opportunity__r.DSI__c, Opportunity__r.DSI__r.Name) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>For Legal Engagement Record Type</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Due date for Next Milestone. The best due date is sometime this week, next week, or within 14 days. Set a due date that is aggressive but achievable in order to drive the pace and keep the process moving forward.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Engagements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagement_Status__c</fullName>
        <inlineHelpText>P3 = Customer is overall satisfied with engagement. 
P2 = Customer is experiencing business value or technical issues causing engagement difficulties. 
P1 = Customer is unsatisfied with engagement and massive turnaround efforts are required.</inlineHelpText>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P1 - Focus</fullName>
                </value>
                <value>
                    <fullName>P2 - Attention</fullName>
                </value>
                <value>
                    <fullName>P3 - Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Engagements2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Engagements4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Health_Flag__c</fullName>
        <formula>CASE( Engagement_Status__c, 
  &quot;P1 - Focus&quot;, IMAGE(&quot;https://mstr--c.na38.content.force.com/servlet/servlet.FileDownload?file=015E0000006LTPP&quot;,&quot;&quot;,16,16), 
  &quot;P2 - Attention&quot;, IMAGE(&quot;https://mstr--c.na38.content.force.com/servlet/servlet.FileDownload?file=015E0000006LTPK&quot;,&quot;&quot;,16,16), 
  &quot;P3 - Reference&quot;, IMAGE(&quot;https://mstr--c.na38.content.force.com/servlet/servlet.FileDownload?file=015E0000006LTPF&quot;,&quot;&quot;,16,16), 
  &quot; &quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_Exec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS Exec</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_LOE_wks__c</fullName>
        <description>Number of weeks to be invested according to MicroStrategy Information Systems.</description>
        <inlineHelpText>Number of weeks to be invested according to MicroStrategy Information Systems.</inlineHelpText>
        <label>IS LOE (wks)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kimble_Engagement_ID__c</fullName>
        <label>Kimble Engagement ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOE__c</fullName>
        <label>LOE (hrs)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less Than 5</fullName>
                </value>
                <value>
                    <fullName>5 to 10</fullName>
                </value>
                <value>
                    <fullName>10 to 20</fullName>
                </value>
                <value>
                    <fullName>Greater Than 20</fullName>
                </value>
                <value>
                    <fullName>10-20</fullName>
                    <isActive>false</isActive>
                    <label>10-20</label>
                </value>
                <value>
                    <fullName>5-10</fullName>
                    <isActive>false</isActive>
                    <label>5-10</label>
                </value>
                <value>
                    <fullName>&lt;5</fullName>
                    <isActive>false</isActive>
                    <label>&lt;5</label>
                </value>
                <value>
                    <fullName>&gt;20</fullName>
                    <isActive>false</isActive>
                    <label>&gt;20</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Milestone__c</fullName>
        <inlineHelpText>WHO at MSTR is going to take action? WHAT action will be taken? WHO at the Customer will be the counterparty? Example: John Smith to gather requirements for POC from Rob Thomas (Director of Operations).</inlineHelpText>
        <label>Next Milestone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Opp_Flag__c</fullName>
        <formula>IF( ISBLANK(Opportunity__r.Next_Opportunity__c), 
  IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000006LTPP&quot;,&quot;&quot;,16,16), 
  HYPERLINK(Opportunity__r.Next_Opportunity__c, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000006LTPF&quot;,&quot;&quot;,16,16) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Opp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Opportunity__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Opportunity__r.Next_Opportunity__r.Id , Opportunity__r.Next_Opportunity__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Assessment__c</fullName>
        <formula>IF( ISBLANK(Opportunity__r.Assessment_Link__c),
  &quot;Not Available&quot;,
  HYPERLINK(Opportunity__r.Assessment_Link__c, &quot;Click here&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Assessment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <inlineHelpText>What are the steps necessary to complete this engagement successfully? ie “1. Complete POC by 3/1 2. Present Proposal by 3/3 3. Meet key stakeholders and get approval for solution 3/10. 4. Present finished solution by 3/12. 5. Close by 3/25&quot;.</inlineHelpText>
        <label>Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Engagements*</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <externalId>true</externalId>
        <label>Project Id</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <formula>( 
(LEN( Scope__c ) / 255) * IF(CONTAINS( Scope__c, &quot; &quot;), 1, 0.7) * IF(CONTAINS( Scope__c, &quot;.&quot;), 1, 0.95) * (1/4) 
+ 
(LEN( Next_Milestone__c ) /255) * IF(CONTAINS( Next_Milestone__c, &quot; &quot;), 1, 0.7) * IF(CONTAINS( Next_Milestone__c, &quot;.&quot;), 1, 0.95) * (1/4) 
+ 
(LEN( Plan__c ) / 255) * IF(CONTAINS( Plan__c, &quot; &quot;), 1, 0.7) * IF(CONTAINS( Plan__c, &quot;.&quot;), 1, 0.95) * (1/4) 
+ 
IF(ISNULL(Due_Date__c), 0, 
IF(Due_Date__c &gt;= TODAY(), 
IF(Due_Date__c &lt;= TODAY() + 14, 1, 
IF(Due_Date__c &lt;= TODAY() + 28, 0.8, 
IF(Due_Date__c &lt;= TODAY() + 42, 0.6, 
IF(Due_Date__c &lt;= TODAY() + 56, 0.4, 
IF(Due_Date__c &lt;= TODAY() + 70, 0.2, 0) 
) 
) 
) 
), 0 
) 
) * (1/4) 
) 
* IF(CONTAINS( Scope__c + Next_Milestone__c + Plan__c, &quot;.&quot;), 1, 0.8) 
* IF(CONTAINS( Scope__c + Next_Milestone__c + Plan__c, &quot;,&quot;), 1, 0.95) 
* IF(CONTAINS( Scope__c + Next_Milestone__c + Plan__c, &quot; &quot;), 1, 0.6) 
* IF(CONTAINS( Scope__c + Next_Milestone__c + Plan__c, &quot; &quot;), 0.6, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quote Id</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recovery_Plan__c</fullName>
        <inlineHelpText>Provide detailed plan to achieve P3 health status.</inlineHelpText>
        <label>Recovery Plan</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Health__c</fullName>
        <formula>CASE( Schedule_Risk__c,
&quot;High&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000006LTPP&quot;,&quot;&quot;,16,16),
&quot;Medium&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000006LTPK&quot;,&quot;&quot;,16,16),
&quot;Low&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000006LTPF&quot;,&quot;&quot;,16,16),
&quot; &quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Risk__c</fullName>
        <label>Schedule Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_Health__c</fullName>
        <formula>CASE( Scope_Risk__c,
&quot;High&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000006LTPP&quot;,&quot;&quot;,16,16),
&quot;Medium&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000006LTPK&quot;,&quot;&quot;,16,16),
&quot;Low&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000006LTPF&quot;,&quot;&quot;,16,16),
&quot; &quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scope Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Risk__c</fullName>
        <label>Scope Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <inlineHelpText>What is the scope of this engagement? What does the customer want to achieve? What are the different pieces of the project?</inlineHelpText>
        <label>Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E1 - Not Started</fullName>
                </value>
                <value>
                    <fullName>E2 - In Progress</fullName>
                </value>
                <value>
                    <fullName>E3 - Completed</fullName>
                </value>
                <value>
                    <fullName>E4 - Customer Accepted</fullName>
                </value>
                <value>
                    <fullName>E0 - Customer Rejected</fullName>
                </value>
                <value>
                    <fullName>LC1 - up to 10% completed</fullName>
                </value>
                <value>
                    <fullName>LC2 - 25% completed</fullName>
                </value>
                <value>
                    <fullName>LC3 - 50% completed</fullName>
                </value>
                <value>
                    <fullName>LC4 - 75% completed</fullName>
                </value>
                <value>
                    <fullName>LC5 - 100% completed</fullName>
                </value>
                <value>
                    <fullName>LC6 - On hold</fullName>
                </value>
                <value>
                    <fullName>LC0 - Discarded</fullName>
                </value>
                <value>
                    <fullName>E1 - Pending</fullName>
                </value>
                <value>
                    <fullName>E2 - Requirements</fullName>
                </value>
                <value>
                    <fullName>E3 - Design</fullName>
                </value>
                <value>
                    <fullName>E4 - Acquire</fullName>
                </value>
                <value>
                    <fullName>E5 - Implementation</fullName>
                </value>
                <value>
                    <fullName>E6 - Acceptance</fullName>
                </value>
                <value>
                    <fullName>E7 - Support</fullName>
                </value>
                <value>
                    <fullName>E8 - Completed</fullName>
                </value>
                <value>
                    <fullName>E0 - Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting - T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Consulting - Fixed Fee</fullName>
                </value>
                <value>
                    <fullName>Cloud - Expert Services</fullName>
                </value>
                <value>
                    <fullName>Cloud - Support</fullName>
                </value>
                <value>
                    <fullName>Premium - Support</fullName>
                </value>
                <value>
                    <fullName>Education - T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Master Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Enterprise License Agreement</fullName>
                </value>
                <value>
                    <fullName>Renewal Agreement</fullName>
                </value>
                <value>
                    <fullName>Reseller Agreement</fullName>
                </value>
                <value>
                    <fullName>License Conversion</fullName>
                </value>
                <value>
                    <fullName>Pilot Agreement</fullName>
                </value>
                <value>
                    <fullName>(i) LC Commercial</fullName>
                    <label>LC Commercial</label>
                </value>
                <value>
                    <fullName>(ii) LC Product</fullName>
                    <label>LC Product</label>
                </value>
                <value>
                    <fullName>(iii) LC Corporate</fullName>
                    <label>LC Corporate</label>
                </value>
                <value>
                    <fullName>(iv) LC Operations</fullName>
                    <label>LC Operations</label>
                </value>
                <value>
                    <fullName>IS Eng</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X3rd_Party_wks__c</fullName>
        <description>Number of weeks to be invested according to a third party.</description>
        <inlineHelpText>Number of weeks to be invested according to a third party.</inlineHelpText>
        <label>3rd Party (wks)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Engagement*</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Engagement_Manager__c</columns>
        <columns>Engagement_Status__c</columns>
        <columns>Stage__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Completed_Legal_Engagements</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Stage__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Next_Milestone__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MSTR_Engagement__c.Legal_Engagement</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>LC5 - 100% completed</value>
        </filters>
        <label>All Completed Legal Engagements</label>
        <language>en_US</language>
        <sharedTo>
            <group>Legal</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IS_Engagements3</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Business_Lead__c</columns>
        <columns>Engagement_Manager__c</columns>
        <columns>Executive_Sponsor__c</columns>
        <columns>IS_Exec__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>IS_LOE_wks__c</columns>
        <columns>Business_LOE_wks__c</columns>
        <columns>X3rd_Party_wks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>IS Eng</value>
        </filters>
        <label>IS Engagements</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Completed_Legal_Engagements</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Description__c</columns>
        <columns>Stage__c</columns>
        <columns>Next_Milestone__c</columns>
        <columns>LOE__c</columns>
        <columns>Due_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MSTR_Engagement__c.Legal_Engagement</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>LC5 - 100% completed</value>
        </filters>
        <label>My Completed Legal Engagements</label>
        <language>en_US</language>
        <sharedTo>
            <group>Legal</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Legal_Engagements</fullName>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Description__c</columns>
        <columns>Stage__c</columns>
        <columns>Next_Milestone__c</columns>
        <columns>LOE__c</columns>
        <columns>Due_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MSTR_Engagement__c.Legal_Engagement</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>LC5 - 100% completed</value>
        </filters>
        <label>My Open Legal Engagements</label>
        <language>en_US</language>
        <sharedTo>
            <group>Legal</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Legal_Engagements</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Description__c</columns>
        <columns>Stage__c</columns>
        <columns>Next_Milestone__c</columns>
        <columns>LOE__c</columns>
        <columns>Due_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MSTR_Engagement__c.Legal_Engagement</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>LC5 - 100% completed</value>
        </filters>
        <label>All Open Legal Engagements</label>
        <language>en_US</language>
        <sharedTo>
            <group>Legal</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements*</pluralLabel>
    <recordTypes>
        <fullName>Cloud_Engagement</fullName>
        <active>true</active>
        <description>Represents a Cloud Support or Cloud Expert Services engagement</description>
        <label>Cloud Engagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Education_Engagement</fullName>
        <active>true</active>
        <description>Represents an Education T&amp;M or Education Fixed Fee engagement</description>
        <label>Education Engagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>IS_Engagement</fullName>
        <active>true</active>
        <description>Represents an Information Systems internal engagement</description>
        <label>IS Engagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_Engagement</fullName>
        <active>true</active>
        <description>Represents a Legal matter</description>
        <label>Legal Engagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Services_Engagement</fullName>
        <active>true</active>
        <description>Represents a Consulting T&amp;M or Consulting Fixed Fee engagement</description>
        <label>Services Engagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Engagement</fullName>
        <active>true</active>
        <description>Represents a Standard or Premium Support engagement</description>
        <label>Support Engagement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>StartDate_cannot_be_greater_than_EndDate</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date cannot be greater than End Date</errorMessage>
    </validationRules>
</CustomObject>